# reranker-serve

./: .env.example  .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  benchmark_concurrent.py  benchmark_tui.py  config.yml  daemon.ps1  daemon.sh  docker-compose.yml  download_model.bat  download_model.ps1  download_model.sh  fix-pytorch.ps1  manage.sh  pyproject.toml  requirements-dev.txt  requirements.txt  reranker_config.yaml.example  run-win.sh  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh  supervisord.conf
.github/workflows/: docker.yml
.omc/: project-memory.json
.omc/state/: agent-replay-d10caf10-a1e6-47c3-bc68-caef17c06656.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/d10caf10-a1e6-47c3-bc68-caef17c06656/: hud-state.json  session-started.json
docs/: CONFIG_GUIDE.md  CONFIG_README.md  SUPERVISOR.md  TEST_HUGGINGFACE.md  admin-ui.md  api-reference.md  benchmark-qwen3-4b.md  concurrency.md  configuration.md  deployment.md  development.md  load-balancer.md  offline-install.md  operations.md
docs/integrations/: litellm.md
docs/superpowers/plans/: 2026-05-26-enterprise-single-node-hardening.md  2026-05-27-phase3a-performance-core.md  2026-05-27-phase3b-telemetry.md  2026-05-27-phase3c-security.md  2026-05-27-phase3d-admin-ui.md
docs/superpowers/specs/: 2026-05-26-enterprise-single-node-design.md  2026-05-27-perf-telemetry-admin-ui-design.md
examples/: litellm.config.yaml  nginx.reranker.conf
scripts/: offline-install.sh
src/: __init__.py  main.py
src/admin/: __init__.py  auth.py  config_io.py  routes.py
src/admin/static/: dashboard.js
src/admin/templates/: base.html  config.html  dashboard.html  login.html  logs.html
src/api/: __init__.py  health.py  lb_routes.py  routes.py
src/config/: __init__.py  logging.py  settings.py
src/engine/: __init__.py  async_engine.py  device_probe.py  request_queue.py
src/engine/handlers/: base.py  cross_encoder.py  factory.py  qwen.py
src/integrations/: __init__.py  litellm_provider.py
src/load_balancer/: __init__.py  client.py  config.py  router.py
src/models/: __init__.py  qwen3_reranker.py  reranker.py
src/observability/: __init__.py  metrics_history.py  observer.py  otel.py  prometheus.py  resources.py
src/schemas/: __init__.py  rerank.py
tests/: conftest.py  test_admin_api.py  test_admin_apply.py  test_admin_auth.py  test_admin_config_io.py  test_admin_login.py  test_admin_logs.py  test_admin_pages.py  test_api.py  test_async_engine.py  test_backpressure.py  test_config.py  test_config_loading.py  test_cpu_threads.py  test_device_probe.py  test_device_probe_memory.py  test_document_text_extraction.py  test_dual_format_rerank.py  test_engine_device_resources.py  test_flat_batching.py  test_flat_batching_cross_encoder.py  test_graceful_shutdown.py  test_handlers.py  test_huggingface_api.py  test_litellm_provider.py  test_load_balancer.py  test_load_kwargs.py  test_metrics.py  test_metrics_history.py  test_metrics_integration.py  test_models.py  test_observer.py  test_otel.py  test_otel_integration.py  test_quantization.py  test_queue_snapshot.py  test_reranker.py  test_resources.py  test_score_pairs.py  test_security_apikey.py  (+3 more)
