[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reranker-serve"
version = "0.1.0"
description = "A FastAPI-based reranker service for Sentence Transformer models (BAAI, Qwen3-reranker)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Reranker Team", email = "team@example.com"}
]
keywords = [
    "reranker",
    "sentence-transformers",
    "fastapi",
    "nlp",
    "machine-learning",
    "cohere",
    "jina"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # ML Dependencies
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
cuda = [
    "torch>=2.0.0",
]
litellm = [
    # Required only to use src.integrations.litellm_provider.RerankerLiteLLMProvider
    # (the Cohere-config path in docs/integrations/litellm.md needs nothing extra).
    "litellm>=1.40.0",
]
tui = [
    # Required only by benchmark_tui.py (live dashboard).
    # Install with: pip install '.[tui]'
    "rich>=13.0.0",
]
quant = [
    "torchao>=0.7.0",
]
gpu-metrics = [
    # Optional: NVIDIA utilization/temp/power for the admin dashboard.
    # Install with: pip install '.[gpu-metrics]'
    "pynvml>=11.5.0",
]
admin = [
    "jinja2>=3.1.0",
]
observability = [
    # Install with: pip install '.[observability]' — required only when RERANKER_EXPOSE_PROMETHEUS_METRICS or RERANKER_ENABLE_OTEL is set
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.scripts]
reranker-serve = "src.main:run_server"

[project.urls]
Homepage = "https://github.com/RadteamBaoDA/reranker-serve"
Repository = "https://github.com/RadteamBaoDA/reranker-serve"
Documentation = "https://github.com/RadteamBaoDA/reranker-serve#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
